# s3-terraform

./: .gitignore  readme.md
task-1/: README.md  dest_account.tf  local.tf  main.tf  provider.tf  source_account.tf  terraform.tfstate.backup
task-1/extra_resources/: dest_account.tf  source_account.tf
task-2/: Cargo.toml  README.md
task-2/src/: main.rs
testing/: locals.tf  main.tf
