[package]
name = "task-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-sdk-sqs = "0.28.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
structopt = "0.3.26"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
